--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,8 @@
+@import "tailwindcss";
+@plugin "daisyui" {
+   themes: light --default, cupcake;
+ }
+
 body {
   font-family: sans-serif;
   margin: 0;
@@ -7,4 +12,10 @@ nav a {
   margin-right: 1rem;
   text-decoration: none;
   color: black;
+}
+nav a.active {
+  margin-right: 1rem;
+  color: black;
+  font-weight: 600;
+  font-size: large;
 }
